pages, photos, content

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,12 +5,33 @@ $cream: rgb(255,251,222);
 
 html, body {
     height: 100%;
-    font-family: "Dancing Script", serif;
     color: $cream;
+    font-family: "Bree Serif", serif;
+    font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Dancing Script", serif;
+}
+
+h1 {
+    text-align: center;
+    margin: 0 0 25px;
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 48px;
 }
 
 .clearfix {
-    overflow: auto;
+    &:before, &:after {
+        content: " ";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
 }
 
 .left, .right {
@@ -19,49 +40,57 @@ html, body {
     width: 50%;
 }
 
+.left {
+    background: url('photo-1.jpg') center center;
+    background-size: cover;
+}
+
 .right {
     background: url('wood-bg.jpg');
     background-size: cover;
     right: 0;
+    overflow-y: auto;
 }
 
 .container {
     padding: 25px 45px;
 }
 
-header {
-    $big-link-height: 48px;
-    $small-link-height: 24px;
-    $small-link-padding: $big-link-height - $small-link-height - 5px;
+a, a:visited, a:active {
+    color: $cream;
+}
 
-    a, a:visited, a:active {
-        color: $cream;
-        text-decoration: none;
-        font-size: 48px;
-        line-height: 1;
-    }
+
+header {
     a:hover {
         opacity: 0.7;
     }
 
-    .home {
-        float: left;
-    }
-
     .menu {
-        padding-top: $small-link-padding;
         margin: 0;
-        float: right;
+        padding: 0;
         list-style: none;
-
 
         li {
             float: left;
-            margin-left: 25px;
-            a {
-                font-size: $small-link-height;
-            }
+            width: 33%;
+            text-align: center;
 
+            a {
+                font-size: 24px;
+                text-decoration: none;
+                &.active {
+                    text-decoration: underline;
+                }
+            }
         }
+    }
+}
+
+section {
+    display: none;
+
+    &.active {
+        display: block;
     }
 }
