border radius on images

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -143,6 +143,7 @@ h2 {
     @include responsive-max(s) {
         background: url(photo-1.jpg) center center no-repeat;
         box-shadow: 0 0 25px 0 white;
+        border-radius: 4px;
         height: 0;
         position: absolute;
         top: 160px;
