--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -306,24 +306,55 @@ section {
     }
 }
 
-
 form {
     margin-bottom: 250px;
 
-    label, input, button {
+    label, input[type="text"], button, textarea {
         display: block;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
     }
 
-    label {
-        margin-bottom: 5px;
-    }
-
-    input, button {
+    input[type="text"], button, textarea {
         margin-bottom: 20px;
         width: 200px;
         background: rgba(255, 255, 255, 0.2);
         border: 1px solid $cream;
         color: $white;
         padding: 5px 8px 6px;
+    }
+
+    textarea {
+        width: 400px;
+        max-width: 100%;
+        height: 100px;
+    }
+
+    input[type="checkbox"] {
+        float: left;
+        margin: 4px 7px 4px 0
+    }
+
+    label {
+        margin-bottom: 5px;
+    }
+
+    li label {
+        margin-bottom: 15px;
+    }
+
+    button {
+        cursor: pointer;
+        width: 150px;
+
+        &:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
     }
 }
