--- a/wedding/page/templates/page/layout.html
+++ b/wedding/page/templates/page/layout.html
@@ -28,7 +28,7 @@
 
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'page/main-bf89bde842.css' %}">
+        <link rel="stylesheet" href="{% static 'page/main-cf65e97ccb.css' %}">
     </head>
     <body class="{{ body_class }}">
         <script>
@@ -60,7 +60,7 @@
                             <a{% if body_class == 'hotels' %} class="active"{% endif %} href="{% url 'hotels' %}">Hotels</a>
                         </li>
                         <li>
-                            <a{% if body_class == 'venue' %} class="active"{% endif %} href="{% url 'venue' %}">Venue</a>
+                            <a{% if body_class == 'rsvp' %} class="active"{% endif %} href="{% url 'rsvp' %}">RSVP</a>
                         </li>
                     </ul>
                     <div class="clearfix"></div>
