using tokens instead of ids for security, cleaning up markup, adding back venue page, tests

--- a/wedding/rsvp/templates/rsvp/rsvp.html
+++ b/wedding/rsvp/templates/rsvp/rsvp.html
@@ -47,7 +47,7 @@
             <h2>RSVP</h2>
 
             <p>
-                To begin, enter your first and last name as well as the
+                Please begin by entering your first and last name as well as the
                 zip code on your invitation.
             </p>
 
