--- a/wedding/page/templates/page/hotels.html
+++ b/wedding/page/templates/page/hotels.html
@@ -1,5 +1,7 @@
 {% extends 'page/layout.html' %}
 
+{% block title %}Hotels{% endblock %}
+
 {% block main %}
     <main>
         <h2>Room Block</h2>
