--- a/wedding/page/templates/page/save-the-date.html
+++ b/wedding/page/templates/page/save-the-date.html
@@ -1,5 +1,7 @@
 {% extends 'page/layout.html' %}
 
+{% block title %}Save The Date{% endblock %}
+
 {% block main %}
     <main>
         <h2>Save the Date</h2>
