--- a/wedding/page/templates/page/venue.html
+++ b/wedding/page/templates/page/venue.html
@@ -1,5 +1,7 @@
 {% extends 'page/layout.html' %}
 
+{% block title %}Venue{% endblock %}
+
 {% block main %}
     <main>
         <h2>The Venue</h2>
