--- a/wedding/page/templates/page/wedding-day-info.html
+++ b/wedding/page/templates/page/wedding-day-info.html
@@ -1,5 +1,7 @@
 {% extends 'page/layout.html' %}
 
+{% block title %}Wedding Day Info{% endblock %}
+
 {% block main %}
     <main>
         <h2>Schedule</h2>
