--- a/wedding/page/templates/page/layout.html
+++ b/wedding/page/templates/page/layout.html
@@ -1,12 +1,11 @@
-{% load static %}
-<!doctype html>
+{% load static %}<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Hotels | Dan and Christin</title>
+        <title>{% block title %}Hotels{% endblock %} | Dan and Christin</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="{% static 'page/apple-icon-72e0120d9b.png' %}'">
         <link rel="apple-touch-icon" sizes="60x60" href="{% static 'page/apple-icon-72e0120d9b.png' %}">
@@ -28,7 +27,7 @@
 
 
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato:300,700" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'page/main-cf65e97ccb.css' %}">
+        <link rel="stylesheet" href="{% static 'page/main-9bade16568.css' %}">
     </head>
     <body class="{{ body_class }}">
         <script>
@@ -65,6 +64,9 @@
                         </li>
                         <li>
                             <a{% if body_class == 'rsvp' %} class="active"{% endif %} href="{% url 'rsvp' %}">RSVP</a>
+                        </li>
+                        <li>
+                            <a{% if body_class == 'bridal_party' %} class="active"{% endif %} href="{% url 'bridal_party' %}">Bridal Party</a>
                         </li>
                     </ul>
                     <div class="clearfix"></div>
