added bridal party page and cleaned it up

--- a/wedding/page/templates/page/bridal-party.html
+++ b/wedding/page/templates/page/bridal-party.html
@@ -3,38 +3,99 @@
 {% block title %}Bridal Party{% endblock %}
 
 {% block main %}
-    <h2>Bridal Party</h2>
-
-    <h3>Matron of Honor</h3>
-
-    Meghan Millar, Sister of the Bride
-
-    <h3>Bridesmaids</h3>
+    <h2>Matron of Honor</h2>
 
     <ul>
-        <li>Lauren Doyle, Bride&apos;s Sister in Law</li>
-        <li>Catherine Zimmer, Bride&apos;s Cousin</li>
-        <li>Gina Wolf, Groom&apos;s Sister</li>
-        <li>Kiira Wolf, Groom&apos;s Sister in Law</li>
-        <li>Nicole Losacco, Bride&apos;s Friend</li>
-        <li>Laura Roche, Bride&apos;s Friend</li>
+        <li class="large">
+            <img src="dist/page/meg-94520f2c7a.jpg" alt="">
+            <span class="name">Meghan Millar</span>
+            <span class="relationship">Sister of the Bride</span>
+        </li>
     </ul>
+    <div class="clearfix"></div>
 
-    <h3>Best Man</h3>
-
-    Andrew Wolf, Brother of the Groom
-
-    <h3>Groomsmen</h3>
+    <h2>Bridesmaids</h2>
 
     <ul>
-        <li>Andrew Wolf, Groom&apos;s Brother</li>
-        <li>Jeremy Simmons, Groom&apos;s Brother in Law</li>
-        <li>Jeffrey Doyle, Bride&apos;s Brother</li>
-        <li>Jacob Millar, Bride&apos;s Brother in Law</li>
-        <li>Brad Carrera, Groom&apos;s Friend</li>
-        <li>Phil Ebbesen, Groom&apos;s Friend</li>
-        <li>Kent Martin, Groom&apos;s Friend</li>
+        <li>
+            <img src="dist/page/lauren-fd103ccdf2.jpg" alt="">
+            <span class="name">Lauren Doyle</span>
+            <span class="relationship">Bride&apos;s Sister in Law</span>
+        </li>
+        <li>
+            <img src="dist/page/katie-263fb421f6.jpg" alt="">
+            <span class="name">Catherine Zimmer</span>
+            <span class="relationship">Bride&apos;s Cousin</span>
+        </li>
+        <li>
+            <img src="dist/page/gina-ea37db9350.jpg" alt="">
+            <span class="name">Gina Wolf</span>
+            <span class="relationship">Groom&apos;s Sister</span>
+        </li>
+        <li>
+            <img src="dist/page/kiira-64be79797b.jpg" alt="">
+            <span class="name">Kiira Wolf</span>
+            <span class="relationship">Groom&apos;s Sister in Law</span>
+        </li>
+        <li>
+            <img src="dist/page/nikki-5cec3704ef.jpg" alt="">
+            <span class="name">Nicole Losacco</span>
+            <span class="relationship">Bride&apos;s Friend</span>
+        </li>
+        <li>
+            <img src="dist/page/laura-01fe6e68cd.jpg" alt="">
+            <span class="name">Laura Roche</span>
+            <span class="relationship">Bride&apos;s Friend</span>
+        </li>
     </ul>
+    <div class="clearfix"></div>
+
+    <h2>Best Man</h2>
+
+    <ul>
+        <li class="large">
+            <img src="dist/page/andy-44b20eee62.jpg" alt="">
+            <span class="name">Andrew Wolf</span>
+            <span class="relationship">Best Man</span>
+        </li>
+    </ul>
+    <div class="clearfix"></div>
+
+    <h2>Groomsmen</h2>
+
+    <ul>
+        <li>
+            <img src="dist/page/jeremy-d65f4e5a20.jpg" alt="">
+            <span class="name">Jeremy Simmons</span>
+            <span class="relationship">Groom&apos;s Brother in Law</span>
+        </li>
+        <li>
+            <img src="dist/page/jeff-8455c375b0.jpg" alt="">
+            <span class="name">Jeffrey Doyle</span>
+            <span class="relationship">Bride&apos;s Brother</span>
+        </li>
+        <li>
+            <img src="dist/page/jacob-674c6d07eb.jpg" alt="">
+            <span class="name">Jacob Millar</span>
+            <span class="relationship">Bride&apos;s Brother in Law</span>
+        </li>
+        <li>
+            <img src="dist/page/brad-bcd7226edd.jpg" alt="">
+            <span class="name">Brad Carrera</span>
+            <span class="relationship">Groom&apos;s Friend</span>
+        </li>
+        <li>
+            <img src="dist/page/phil-bb6b6b6850.jpg" alt="">
+            <span class="name">Phil Ebbesen</span>
+            <span class="relationship">Groom&apos;s Friend</span>
+        </li>
+        <li>
+            <img src="dist/page/kent-0da8dfb0db.jpg" alt="">
+            <span class="name">Kent Martin</span>
+            <span class="relationship">Groom&apos;s Friend</span>
+        </li>
+    </ul>
+    <div class="clearfix"></div>
 {% endblock %}
 
 
