--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@ $ff-primary: "Dancing Script", serif;
 $ff-secondary: "Lato", serif;
 
 @import "forms";
+@import "bridal-party";
 
 
 $small: 480px;
@@ -124,26 +125,34 @@ h2 {
 }
 
 .save_the_date .left {
-    background-image: url('photo-14.jpg');
+    background-image: url('photo-4.jpg');
     @include responsive-max(m) {
         background-position: center -20px;
     }
 }
 
 .wedding_day_info .left {
-    background-image: url('photo-10.jpg');
-}
-
-.hotels .left {
-    background-image: url('photo-3.jpg');
-}
-
-.venue .left {
     background-image: url('photo-1.jpg');
 }
 
+.hotels .left {
+    background-image: url('photo-2.jpg');
+}
+
+.venue .left {
+    background-image: url('photo-3.jpg');
+}
+
+.bridal_party .left {
+    background-image: url('photo-7.jpg');
+}
+
+.rsvp .left {
+    background-image: url('photo-8.jpg');
+}
+
 .left {
-    background: url('photo-1.jpg') top center;
+    background: url('photo-4.jpg') top center;
     background-size: cover;
 
     @include responsive-max(xs) {
