site styles cleanup

--- a/wedding/page/templates/page/bridal-party.html
+++ b/wedding/page/templates/page/bridal-party.html
@@ -33,7 +33,7 @@
             <span class="relationship">Groom&apos;s Sister</span>
         </li>
         <li>
-            <img src="dist/page/kiira-64be79797b.jpg" alt="">
+            <img src="dist/page/kiira-909c08af35.jpg" alt="">
             <span class="name">Kiira Wolf</span>
             <span class="relationship">Groom&apos;s Sister in Law</span>
         </li>
@@ -56,7 +56,7 @@
         <li class="large">
             <img src="dist/page/andy-44b20eee62.jpg" alt="">
             <span class="name">Andrew Wolf</span>
-            <span class="relationship">Best Man</span>
+            <span class="relationship">Groom&apos;s Brother</span>
         </li>
     </ul>
     <div class="clearfix"></div>
