--- a/assets/scss/_bridal-party.scss
+++ b/assets/scss/_bridal-party.scss
@@ -8,12 +8,21 @@ body.bridal_party {
         display: block;
         float: left;
         width: calc(33% - 8px);
+        height: calc(33% - 8px);
+        @include responsive-max(xs) {
+            width: calc(50% - 10px);
+        }
+
         margin: 5px;
         position: relative;
         height: auto;
 
         &.large {
             width: 50%;
+
+            @include responsive-max(xs) {
+                width: calc(100% - 10px);
+            }
         }
 
         span {
