--- a/assets/scss/_bridal-party.scss
+++ b/assets/scss/_bridal-party.scss
@@ -8,6 +8,13 @@ body.bridal_party {
         display: block;
         float: left;
         width: calc(33% - 10px);
+
+        @include responsive-min(m) {
+            @include responsive-max(l) {
+                width: calc(50% - 10px);
+            }
+        }
+
         @include responsive-max(xs) {
             width: calc(50% - 10px);
         }
@@ -18,6 +25,12 @@ body.bridal_party {
 
         &.large {
             width: 50%;
+
+            @include responsive-min(m) {
+                @include responsive-max(l) {
+                    width: calc(100% - 10px);
+                }
+            }
 
             @include responsive-max(xs) {
                 width: calc(100% - 10px);
